--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     // https://mvnrepository.com/artifact/com.squareup.moshi/moshi
     compile group: 'com.squareup.moshi', name: 'moshi', version: '1.5.0'
 
+    // https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-core
+    compile group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.0.0'
+
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
 //    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
