--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.0.0'
 
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
-//    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     testCompile 'junit:junit:4.12'
 }
